--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -13,3 +13,25 @@ $color-gray: #f2f2f2;
 $color-gray-dark: #adb5bd;
 $color-gray-medium: darken($color-gray, 10%);
 $color-gray-font: #696B6C;
+
+
+/* ############### NEW ############### */
+$color-gray-1: #ececec;
+$color-gray-2: #b1b1b1;
+$color-gray-3: #484848;
+
+$color-blue-1: #1597ec;
+$color-blue-2: #128fe1;
+$color-blue-3: #0f87d6;
+
+$color-red-1: #e04540;
+$color-red-2: #d53e39;
+$color-red-3: #ca332e;
+
+$color-green-1: #3ab656;
+$color-green-2: #35ac50;
+$color-green-3: #31a64b;
+
+$color-yellow-1: #f9bf10;
+$color-yellow-2: #f1b90f;
+$color-yellow-3: #e9b30f;
