Elements removal, New notification, Colors, Global
- Removal unused elements
- Added new notification with new design
- Added new colors
- Change Global CSS

--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -16,7 +16,8 @@ $color-gray-font: #696B6C;
 
 
 /* ############### NEW ############### */
-$color-gray-1: #ececec;
+$color-gray-0: #f6f6f6;
+$color-gray-1: #e1e1e1;
 $color-gray-2: #b1b1b1;
 $color-gray-3: #484848;
 
