--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -27,6 +27,7 @@ input[type='submit']{
   text-align: center;
   text-decoration: none;
   cursor: pointer;
+  margin: 0;
   padding: 0.5em 1em;
   @include border-radius(3px);
   
@@ -87,7 +88,7 @@ input[type='submit']{
   
   /* GLOBAL */
   &.ms-shadow{
-    @include box-shadow(rgba(black, 0.2) 0 4px 5px -4px);
+    @include box-shadow(rgba(black, 0.2) 0 6px 5px -4px);
   }
 
   &.ms-rounded{
