--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body{
-	font-family: 'Nunito', BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 b,strong{
@@ -17,6 +17,6 @@ b,strong{
 }
 
 a{
-	color: $color-info;
+	color: $color-blue-1;
 }
 
