--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -21,18 +21,18 @@ $color-gray-1: #e1e1e1;
 $color-gray-2: #b1b1b1;
 $color-gray-3: #484848;
 
-$color-blue-1: #1597ec;
-$color-blue-2: #128fe1;
-$color-blue-3: #0f87d6;
+$color-blue-1: #219ced;
+$color-blue-2: shade($color-blue-1, 7);
+$color-blue-3: shade($color-blue-2, 7);
 
 $color-red-1: #e04540;
-$color-red-2: #d53e39;
-$color-red-3: #ca332e;
+$color-red-2: shade($color-red-1, 7);
+$color-red-3: shade($color-red-2, 7);
 
 $color-green-1: #3ab656;
-$color-green-2: #35ac50;
-$color-green-3: #31a64b;
+$color-green-2: shade($color-green-1, 7);
+$color-green-3: shade($color-green-2, 7);
 
 $color-yellow-1: #f9bf10;
-$color-yellow-2: #f1b90f;
-$color-yellow-3: #e9b30f;
+$color-yellow-2: shade($color-yellow-1, 7);
+$color-yellow-3: shade($color-yellow-2, 7);
